test question and displaying

--- a/pages/board.html
+++ b/pages/board.html
@@ -75,6 +75,42 @@
         color: aliceblue;
         background-color: red;
       }
+      button.Yes {
+        position: absolute;
+        left: -10%;
+        right: 0;
+        top: 80%;
+        bottom: 10%;
+        display: block;
+        display: -webkit-box;
+        margin: auto;
+        align-self: center;
+        text-align: center;
+        width: auto;
+        height: auto;
+        font-size: 30px;
+        text-align: center;
+        color: aliceblue;
+        background-color: red;
+      }
+      button.No {
+        position: absolute;
+        left: 10%;
+        right: 0;
+        top: 80%;
+        bottom: 10%;
+        display: block;
+        display: -webkit-box;
+        margin: auto;
+        align-self: center;
+        text-align: center;
+        width: auto;
+        height: auto;
+        font-size: 30px;
+        text-align: center;
+        color: aliceblue;
+        background-color: red;
+      }
       button.exit {
         display: inline-block;
         margin: auto;
