--- a/pages/board.html
+++ b/pages/board.html
@@ -11,6 +11,7 @@
       @font-face { font-family: Monopoly; src: url('../assets/MONOPOLY.ttf'); } 
       body {
         background-image: url("../assets/background.jpg");
+        overflow: hidden;
       }
       img.board {
         display: block;
@@ -147,6 +148,8 @@
         position: relative;
         top: -80px;
         left: 613px;
+        border-radius: 15px;
+        z-index: 2;
       }
       div.player2 {
         background-color: red;
@@ -157,6 +160,8 @@
         left: 613px;
         margin-left: 20px;
         margin-top: -30px;
+        border-radius: 15px;
+        z-index: 2;
       }
       div.field {
         left: 0;
