--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,6 +9,7 @@
     <title>Monopoly</title>
     <script src="../src/common-scripts.js" type="module"></script>
     <script src="../src/menu.js" type="module"></script>
+    <link rel="prefetch" href="../assets/background.jpg">
   </head>
   <body>
     <style>
