--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,7 +9,9 @@
     <title>Monopoly</title>
     <script src="../src/common-scripts.js" type="module"></script>
     <script src="../src/menu.js" type="module"></script>
-    <link rel="prefetch" href="../assets/background.jpg">
+    <link rel="preload prefetch" href="../assets/background.jpg" as="image">
+    <link rel="preload prefetch" href="../assets/logo.png" as="image">
+    <link rel="preload prefetch prerender" href="./board.html">
   </head>
   <body>
     <style>
