--- a/pages/menu.html
+++ b/pages/menu.html
@@ -23,6 +23,7 @@
       }
       button {
         font-family: Monopoly, sans-serif;
+        position: fixed;
       }
       button.startbutton {
         display: block;
@@ -30,11 +31,12 @@
         align-self: center;
         width: auto;
         height: auto;
-        font-size: 40px;
+        bottom: 10vmax;
+        left: 43vmax;
+        font-size: 3vmax;
         text-align: center;
         color: aliceblue;
         background-color: red;
-        margin-top: 10%;
       }
       button.exitbutton {
         display: block;
@@ -43,18 +45,21 @@
         align-self: center;
         width: auto;
         height: auto;
-        font-size: 40px;
+        bottom: 5vmax;
+        left: 47.5vmax;
+        font-size: 3vmax;
         text-align: center;
         color: aliceblue;
         background-color: red;
       }
       img.logo {
         display: block;
-        margin: auto;
-        align-self: center;
+        position: fixed;
+        top: 5vmax;
+        left: 25vmax;
+        width: 50vmax;
         height: auto;
-        width: auto;
-        scale: 0.5;
+        align-self: center;
       }
     </style>
     <img class="logo" id="logo" src="../assets/logo.png" />
