--- a/pages/board.html
+++ b/pages/board.html
@@ -171,17 +171,17 @@
       img.player1 {
         width: 5vmax;
         height: auto;
-        position: fixed;
-        bottom: 5.5vmax;
-        left: 68vmax;
+        position: relative;
+        bottom: 13%;
+        left: 87%;
         z-index: 2;
       }
       img.player2 {
         width: 2vmax;
         height: auto;
-        position: fixed;
-        bottom: 3.5vmax;
-        left: 68vmax;
+        position: relative;
+        bottom: 10%;
+        left: 80%;
         z-index: 2;
       }
       div.field {
