--- a/pages/menu.html
+++ b/pages/menu.html
@@ -31,9 +31,9 @@
         align-self: center;
         width: auto;
         height: auto;
-        bottom: 10vmax;
-        left: 43vmax;
-        font-size: 3vmax;
+        bottom: 15vmin;
+        left: 92.1vmin;
+        font-size: 5vmin;
         text-align: center;
         color: aliceblue;
         background-color: red;
@@ -45,9 +45,9 @@
         align-self: center;
         width: auto;
         height: auto;
-        bottom: 5vmax;
-        left: 47.5vmax;
-        font-size: 3vmax;
+        bottom: 5vmin;
+        left: 99.8vmin;
+        font-size: 5vmin;
         text-align: center;
         color: aliceblue;
         background-color: red;
@@ -55,9 +55,9 @@
       img.logo {
         display: block;
         position: fixed;
-        top: 5vmax;
-        left: 25vmax;
-        width: 50vmax;
+        top: 5vmin;
+        left: 69.8vmin;
+        width: 70vmin;
         height: auto;
         align-self: center;
       }
