--- a/pages/board.html
+++ b/pages/board.html
@@ -112,14 +112,13 @@
       }
       button.OK {
         position: fixed;
-        left: 48.5vmax;
-        bottom: 3vmax;
+        top: 80%;
         display: block;
         margin: auto;
         align-self: center;
         text-align: center;
-        width: auto;
-        height: auto;
+        width: 17vmin;
+        height: 7vmin;
         font-size: 5vmin;
         text-align: center;
         color: aliceblue;
@@ -127,14 +126,17 @@
       }
       button.Yes {
         position: fixed;
-        left: 40vmax;
-        bottom: 5vmax;
+        left: 0;
+        right: 10%;
+        top: 80%;
+        bottom: 0%;
         display: block;
         margin: auto;
         align-self: center;
-        text-align: center;
-        width: auto;
-        height: auto;
+        display: block;
+        margin: auto;
+        width: 17vmin;
+        height: 7vmin;
         font-size: 5vmin;
         text-align: center;
         color: aliceblue;
@@ -142,14 +144,16 @@
       }
       button.No {
         position: fixed;
-        left: 53vmax;
-        bottom: 5vmax;
+        left: 10%;
+        right: 0%;
+        top: 80%;
+        bottom: 0%;
         display: block;
         margin: auto;
         align-self: center;
         text-align: center;
-        width: auto;
-        height: auto;
+        width: 17vmin;
+        height: 7vmin;
         font-size: 5vmin;
         text-align: center;
         color: aliceblue;
