fixes and progress

--- a/pages/board.html
+++ b/pages/board.html
@@ -88,7 +88,7 @@
         word-wrap: break-word;
         white-space: normal;
         width: fit-content;
-        font-family: Monopoly, sans-serif;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 15vmax;
       }
       div.imagetext {
