--- a/pages/menu.html
+++ b/pages/menu.html
@@ -26,40 +26,55 @@
         position: fixed;
       }
       button.startbutton {
+        position: fixed;
+        left: 0;
+        right: 0%;
+        top: 50%;
+        bottom: 0%;
         display: block;
         margin: auto;
         align-self: center;
-        width: auto;
-        height: auto;
-        bottom: 10vmax;
-        left: 43vmax;
-        font-size: 3vmax;
+        display: block;
+        margin: auto;
+        width: 27vmin;
+        height: 7vmin;
+        font-size: 5vmin;
         text-align: center;
         color: aliceblue;
         background-color: red;
       }
       button.exitbutton {
+        position: fixed;
+        left: 0;
+        right: 0%;
+        top: 70%;
+        bottom: 0%;
         display: block;
         margin: auto;
-        margin-top: 5px;
         align-self: center;
-        width: auto;
-        height: auto;
-        bottom: 5vmax;
-        left: 47.5vmax;
-        font-size: 3vmax;
+        display: block;
+        margin: auto;
+        width: 17vmin;
+        height: 7vmin;
+        font-size: 5vmin;
         text-align: center;
         color: aliceblue;
         background-color: red;
       }
       img.logo {
-        display: block;
         position: fixed;
-        top: 5vmax;
-        left: 25vmax;
-        width: 50vmax;
+        left: 0;
+        right: 0%;
+        top: 0%;
+        bottom: 50%;
+        width: 40%;
         height: auto;
+        display: block;
+        margin: auto;
         align-self: center;
+        display: block;
+        margin: auto;
+        color: aliceblue;
       }
     </style>
     <img class="logo" id="logo" src="../assets/logo.png" />
