--- a/pages/board.html
+++ b/pages/board.html
@@ -9,14 +9,14 @@
     <title>Monopoly Board</title>
     <script src="../src/common-scripts.js" type="module"></script>
     <script src="../src/board.js" type="module"></script>
-    <link rel="preload prefetch" as="image" href="../assets/background.jpg" />
-    <link rel="preload prefetch" as="image" href="../assets/board.jpg" />
-    <link rel="preload prefetch" as="image" href="../assets/card.jpg" />
-    <link rel="preload prefetch" as="image" href="../assets/stockcard.png" />
-    <link rel="preload prefetch" as="image" href="../assets/cover.png" />
-    <link rel="preload prefetch" as="image" href="../assets/dice.png" />
-    <link rel="preload prefetch" as="image" href="../assets/player1.png" />
-    <link rel="preload prefetch" as="image" href="../assets/player2.png" />
+    <link rel="preload prefetch" as="image" href="../assets/background.avif" />
+    <link rel="preload prefetch" as="image" href="../assets/board.avif" />
+    <link rel="preload prefetch" as="image" href="../assets/card.avif" />
+    <link rel="preload prefetch" as="image" href="../assets/stockcard.avif" />
+    <link rel="preload prefetch" as="image" href="../assets/cover.avif" />
+    <link rel="preload prefetch" as="image" href="../assets/dice.avif" />
+    <link rel="preload prefetch" as="image" href="../assets/player1.avif" />
+    <link rel="preload prefetch" as="image" href="../assets/player2.avif" />
     <link rel="preload prefetch" as="fetch" href="../assets/items.json" />
     <link rel="preload prefetch" as="fetch" href="../assets/coords.json" />
     <link rel="preload prefetch" as="font" href="../assets/MONOPOLY.ttf" />
@@ -68,7 +68,7 @@
         font-display: swap;
       }
       body {
-        background-image: url("../assets/background.jpg");
+        background-image: url("../assets/background.avif");
         overflow: hidden;
       }
       img.board {
@@ -269,13 +269,13 @@
     </style>
     <button class="exit" id="exit">Menu</button>
     <button class="exit" id="giveup">Give up</button>
-    <img class="dice" id="dice" src="../assets/dice.png" />
+    <img class="dice" id="dice" src="../assets/dice.avif" />
     <div class="field" id="field">
-      <img class="board" id="board" src="../assets/board.jpg" />
-      <img class="player1" id="player1" src="../assets/player1.png" /><img
+      <img class="board" id="board" src="../assets/board.avif" />
+      <img class="player1" id="player1" src="../assets/player1.avif" /><img
         class="player2"
         id="player2"
-        src="../assets/player2.png"
+        src="../assets/player2.avif"
       />
     </div>
     <div class="score" id="score">
