--- a/pages/board.html
+++ b/pages/board.html
@@ -59,6 +59,8 @@
       href="../assets/monopoly_victory.wav"
     />
     <link rel="preload prefetch" as="audio" href="../assets/monopoly_win.wav" />
+    <link rel="preload prefetch" as="video" href="../assets/liar.webm" />
+    <link rel="preload prefetch" as="video" href="../assets/sorikkun.webm" />
   </head>
   <body>
     <style>
