--- a/pages/board.html
+++ b/pages/board.html
@@ -9,58 +9,7 @@
     <title>Monopoly Board</title>
     <script src="../src/common-scripts.js" type="module"></script>
     <script src="../src/board.js" type="module"></script>
-    <link rel="preload prefetch" as="image" href="../assets/background.avif" />
-    <link rel="preload prefetch" as="image" href="../assets/board.avif" />
-    <link rel="preload prefetch" as="image" href="../assets/card.avif" />
-    <link rel="preload prefetch" as="image" href="../assets/stockcard.avif" />
-    <link rel="preload prefetch" as="image" href="../assets/cover.avif" />
-    <link rel="preload prefetch" as="image" href="../assets/dice.avif" />
-    <link rel="preload prefetch" as="image" href="../assets/player1.avif" />
-    <link rel="preload prefetch" as="image" href="../assets/player2.avif" />
-    <link rel="preload prefetch" as="fetch" href="../assets/items.json" />
-    <link rel="preload prefetch" as="fetch" href="../assets/coords.json" />
-    <link rel="preload prefetch" as="font" href="../assets/MONOPOLY.ttf" />
-    <link rel="preload prefetch" as="audio" href="../assets/monopoly1.mp3" />
-    <link rel="preload prefetch" as="audio" href="../assets/monopoly2.mp3" />
-    <link rel="preload prefetch" as="audio" href="../assets/monopoly3.mp3" />
-    <link
-      rel="preload prefetch"
-      as="audio"
-      href="../assets/monopoly_chance.wav"
-    />
-    <link
-      rel="preload prefetch"
-      as="audio"
-      href="../assets/monopoly_correct.wav"
-    />
-    <link
-      rel="preload prefetch"
-      as="audio"
-      href="../assets/monopoly_dice.wav"
-    />
-    <link
-      rel="preload prefetch"
-      as="audio"
-      href="../assets/monopoly_fail.wav"
-    />
-    <link
-      rel="preload prefetch"
-      as="audio"
-      href="../assets/monopoly_lose.wav"
-    />
-    <link
-      rel="preload prefetch"
-      as="audio"
-      href="../assets/monopoly_select.wav"
-    />
-    <link
-      rel="preload prefetch"
-      as="audio"
-      href="../assets/monopoly_victory.wav"
-    />
-    <link rel="preload prefetch" as="audio" href="../assets/monopoly_win.wav" />
-    <link rel="preload prefetch" as="video" href="../assets/liar.webm" />
-    <link rel="preload prefetch" as="video" href="../assets/sorikkun.webm" />
+    <script src="../src/preload.js"></script>
   </head>
   <body>
     <style>
@@ -72,6 +21,24 @@
       body {
         background-image: url("../assets/background.avif");
         overflow: hidden;
+      }
+      div.loading {
+        position: fixed;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        display: block;
+        margin: auto;
+        text-align: center;
+        align-content: center;
+        height: fit-content;
+        word-wrap: break-word;
+        white-space: normal;
+        width: fit-content;
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
+        font-size: 5vmax;
       }
       img.board {
         display: block;
@@ -112,6 +79,7 @@
         left: 0%;
         width: 25vmin;
         height: auto;
+        display: none;
       }
       div.cardtext {
         left: 0;
@@ -214,7 +182,7 @@
         background-color: red;
       }
       button.exit {
-        display: inline-block;
+        display: none;
         margin: auto;
         align-self: center;
         width: auto;
@@ -228,7 +196,7 @@
         position: fixed;
         right: 0;
         top: 1%;
-        display: block;
+        display: none;
         margin: auto;
         text-align: right;
         height: fit-content;
@@ -260,7 +228,7 @@
         right: 0;
         top: 5%;
         bottom: 0;
-        display: block;
+        display: none;
         margin: auto;
         align-self: center;
         height: 90vmin;
@@ -272,6 +240,7 @@
     <button class="exit" id="exit">Menu</button>
     <button class="exit" id="giveup">Give up</button>
     <img class="dice" id="dice" src="../assets/dice.avif" />
+    <div class="loading" id="loading">Loading...</div>
     <div class="field" id="field">
       <img class="board" id="board" src="../assets/board.avif" />
       <img class="player1" id="player1" src="../assets/player1.avif" /><img
