--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,8 +9,7 @@
     <title>Monopoly</title>
     <script src="../src/common-scripts.js" type="module"></script>
     <script src="../src/menu.js" type="module"></script>
-    <link rel="preload prefetch" href="../assets/background.avif" as="image">
-    <link rel="preload prefetch" href="../assets/logo.avif" as="image">
+    <script src="../src/preload.js"></script>
     <link rel="preload prefetch prerender" href="./board.html">
   </head>
   <body>
