--- a/pages/board.html
+++ b/pages/board.html
@@ -168,14 +168,16 @@
       }
       button.PlayAgain {
         position: fixed;
-        left: 45.5vmax;
-        bottom: 7vmax;
+        left: 0%;
+        right: 0%;
+        top: 60%;
+        bottom: 0%;
         display: block;
         margin: auto;
         align-self: center;
         text-align: center;
-        width: auto;
-        height: auto;
+        width: 27vmin;
+        height: 7vmin;
         font-size: 5vmin;
         text-align: center;
         color: aliceblue;
