--- a/pages/board.html
+++ b/pages/board.html
@@ -119,7 +119,10 @@
       }
       button.OK {
         position: fixed;
-        top: 80%;
+        left: 0%;
+        right: 0%;
+        top: 70%;
+        bottom: 0%;
         display: block;
         margin: auto;
         align-self: center;
