--- a/pages/results.html
+++ b/pages/results.html
@@ -45,7 +45,7 @@
         position: fixed;
         left: 0;
         right: 0%;
-        top: 70%;
+        top: 80%;
         bottom: 0%;
         display: block;
         margin: auto;
@@ -72,6 +72,23 @@
         margin: auto;
         color: aliceblue;
       }
+      button.playagain {
+        position: fixed;
+        left: 0%;
+        right: 0%;
+        top: 60%;
+        bottom: 0%;
+        display: block;
+        margin: auto;
+        align-self: center;
+        text-align: center;
+        width: 27vmin;
+        height: 7vmin;
+        font-size: 5vmin;
+        text-align: center;
+        color: aliceblue;
+        background-color: red;
+      }
     </style>
     <img class="logo" id="logo" src="../assets/logo.avif" />
     <div class="score" id="score">
@@ -79,6 +96,7 @@
         Team 1: <span class="score1" id="score1">0</span><br>Team 2: <span class="score2" id="score2">0</span><br>
         Congratulations!
     </div>
+    <button class="playagain" id="playagain">Play Again</button>
     <button class="exitbutton" id="exitbutton">Exit</button>
   </body>
 </html>
