--- a/pages/menu.html
+++ b/pages/menu.html
@@ -10,11 +10,14 @@
     <script src="../src/common-scripts.js" type="module"></script>
     <script src="../src/menu.js" type="module"></script>
     <script src="../src/preload.js"></script>
-    <link rel="preload prefetch prerender" href="./board.html">
+    <link rel="preload prefetch prerender" href="./board.html" />
   </head>
   <body>
     <style>
-      @font-face { font-family: Monopoly; src: url('../assets/MONOPOLY.ttf'); }       
+      @font-face {
+        font-family: Monopoly;
+        src: url("../assets/MONOPOLY.ttf");
+      }
       body {
         background-image: url("../assets/background.avif");
         display: grid;
