combine assets in a pack

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -13,73 +13,7 @@
     <link rel="preload prefetch prerender" href="./board.html" />
   </head>
   <body>
-    <style>
-      @font-face {
-        font-family: Monopoly;
-        src: url("../assets/MONOPOLY.ttf");
-      }
-      body {
-        background-image: url("../assets/background.avif");
-        display: grid;
-        overflow: hidden;
-      }
-      button {
-        font-family: Monopoly, sans-serif;
-        position: fixed;
-      }
-      button.startbutton {
-        position: fixed;
-        left: 0;
-        right: 0%;
-        top: 50%;
-        bottom: 0%;
-        display: block;
-        margin: auto;
-        align-self: center;
-        display: block;
-        margin: auto;
-        width: 27vmin;
-        height: 7vmin;
-        font-size: 5vmin;
-        text-align: center;
-        color: aliceblue;
-        background-color: red;
-      }
-      button.exitbutton {
-        position: fixed;
-        left: 0;
-        right: 0%;
-        top: 70%;
-        bottom: 0%;
-        display: block;
-        margin: auto;
-        align-self: center;
-        display: block;
-        margin: auto;
-        width: 17vmin;
-        height: 7vmin;
-        font-size: 5vmin;
-        text-align: center;
-        color: aliceblue;
-        background-color: red;
-      }
-      img.logo {
-        position: fixed;
-        left: 0;
-        right: 0%;
-        top: 0%;
-        bottom: 50%;
-        width: 40%;
-        height: auto;
-        display: block;
-        margin: auto;
-        align-self: center;
-        display: block;
-        margin: auto;
-        color: aliceblue;
-      }
-    </style>
-    <img class="logo" id="logo" src="../assets/logo.avif" />
+    <img class="logo" id="logo" src="logo.avif" />
     <button class="startbutton" id="startbutton">Start Game</button
     ><br /><button class="exitbutton" id="exitbutton">Exit</button>
   </body>
