basic package support

--- a/pages/board.html
+++ b/pages/board.html
@@ -14,14 +14,13 @@
   <body>
     <button class="exit" id="exit">Menu</button>
     <button class="exit" id="giveup">Give up</button>
-    <img class="dice" id="dice" src="dice.avif" />
+    <img class="dice" id="dice"/>
     <div class="loading" id="loading">Loading...</div>
     <div class="field" id="field">
-      <img class="board" id="board" src="board.avif" />
-      <img class="player1" id="player1" src="player1.avif" /><img
+      <img class="board" id="board"/>
+      <img class="player1" id="player1"/><img
         class="player2"
         id="player2"
-        src="player2.avif"
       />
     </div>
     <div class="score" id="score">
