--- a/pages/menu.html
+++ b/pages/menu.html
@@ -13,7 +13,13 @@
     <link rel="preload prefetch prerender" href="./board.html" />
   </head>
   <body>
-    <img class="logo" id="logo" src="logo.avif" />
+    <img class="logo" id="logo"/>
+    <p class="package" id="packagenotice">Please select a package:</p>
+    <select class="package" id="package">
+    </select>
+    <p class="mode" id="modenotice">Please select a mode:</p>
+    <select class="mode" id="mode">
+    </select>
     <button class="startbutton" id="startbutton">Start Game</button
     ><br /><button class="exitbutton" id="exitbutton">Exit</button>
   </body>
