--- a/pages/results.html
+++ b/pages/results.html
@@ -9,12 +9,10 @@
     <title>Monopoly</title>
     <script src="../src/common-scripts.js" type="module"></script>
     <script src="../src/results.js" type="module"></script>
-    <link rel="preload prefetch" href="background.avif" as="image" />
-    <link rel="preload prefetch" href="logo.avif" as="image" />
     <link rel="preload prefetch prerender" href="./board.html" />
   </head>
   <body>
-    <img class="logo" id="logo" src="logo.avif" />
+    <img class="logo" id="logo"/>
     <div class="score" id="score">
       Final Score:<br />
       Team 1: <span class="score1" id="score1">0</span><br />Team 2:
