--- a/pages/results.html
+++ b/pages/results.html
@@ -19,6 +19,6 @@
       Congratulations!
     </div>
     <button class="playagain" id="playagain">Play Again</button>
-    <button class="exitbutton" id="exitbutton">Exit</button>
+    <button class="exitbutton" id="exitbutton">Menu</button>
   </body>
 </html>
