more global patches

--- a/pages/board.html
+++ b/pages/board.html
@@ -24,8 +24,16 @@
       />
     </div>
     <div class="score" id="score">
-      Team 1: <span class="score1" id="score1">0</span><br />Team 2:
-      <span class="score2" id="score2">0</span>
+      Team 1: <span class="score1" id="score1">0</span><br />
+      <div class="owneddiv">
+        <img id="teamred" class="teamcolor">
+        <span class="owned" id="owned1">0</span>
+      </div>
+      Team 2: <span class="score2" id="score2">0</span><br />
+      <div class="owneddiv">
+        <img id="teamblue" class="teamcolor">
+        <span class="owned" id="owned2">0</span>
+      </div>
     </div>
   </body>
 </html>
