--- a/pages/board.html
+++ b/pages/board.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1"
     />
-    <title>Monopoly Board</title>
+    <title>LanguagePoly</title>
     <script src="../src/common-scripts.js" type="module"></script>
     <script src="../src/board.js" type="module"></script>
     <script src="../src/preload.js"></script>
