--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,7 +9,7 @@
     <title>LanguagePoly</title>
     <script src="../src/common-scripts.js" type="module"></script>
     <script src="../src/menu.js" type="module"></script>
-    <script src="../src/preload.js"></script>
+    <script src="../lib/preload.js"></script>
   </head>
   <body>
     <img class="logo" id="logo"/>
