--- a/pages/board.html
+++ b/pages/board.html
@@ -9,7 +9,7 @@
     <title>LanguagePoly</title>
     <script src="../src/common-scripts.js" type="module"></script>
     <script src="../src/board.js" type="module"></script>
-    <script src="../src/preload.js"></script>
+    <script src="../lib/preload.js"></script>
   </head>
   <body>
     <button class="exit" id="exit">Menu</button>
