--- a/pages/results.html
+++ b/pages/results.html
@@ -7,7 +7,7 @@
       content="width=device-width, height=device-height, initial-scale=1"
     />
     <title>LanguagePoly</title>
-    <script src="../src/common-scripts.js" type="module"></script>
+    <script src="../engine.js" type="module"></script>
     <script src="../src/results.js" type="module"></script>
   </head>
   <body>
